--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <strong>We're sorry but app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-	<h1>EST ES UN CAMBIO DE LA RAMA INDEX</h1>
+	<h1>EST ES UN CAMBIO DE LA RAMA INDEX PARA PRUEBAS</h1>
     <!-- built files will be auto injected -->
   </body>
 </html>
