--- a/subfolder/index2.html
+++ b/subfolder/index2.html
@@ -5,10 +5,11 @@
 	var $i;
 ?>
 
-<<<<<<< HEAD
 <p2>Sigo trabajndo</p2>
 <p3>Mas trabajo</p3>
 h1>ESTE ES TOTALMENTE DIFERENTE</h1>
+
+<h1>La rama de FER sigue activa.</h1>
 
 <h2 class="title font-weight-regular">Detalles de la solicitud de viaje</h2>
 	trabajo-paralelo
