Sigue la principal

--- a/subfolder/index2.html
+++ b/subfolder/index2.html
@@ -1,11 +1,12 @@
 <h1>Trabajo del reporte x</h1>
 
+<h1>La rama de Vic sigue siendo la principal.</h1>
+
 <?php
 	echo info();
 	var $i;
 ?>
 
-<<<<<<< HEAD
 <p2>Sigo trabajndo</p2>
 <p3>Mas trabajo</p3>
 h1>ESTE ES TOTALMENTE DIFERENTE</h1>
