--- a/subfolder/index2.html
+++ b/subfolder/index2.html
@@ -1,7 +1,7 @@
 <title>AGREGO LINEA</title>
 <h1>Trabajo del reporte x</h1>
 
-<h1>La rama de Vic sigue siendo la principal.</h1>
+<h1>CONFLICTO PROVOCADO</h1>
 
 <?php
 	echo info();
